# detectree-examples

./: .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
detectree_example/: get_tiles_to_download.py  make_confusion_df.py  make_response_tiles.py  make_tiles.py  plot_utils.py  settings.py
detectree_examples/: get_tiles_to_download.py  make_confusion_df.py  make_response_tiles.py  make_tiles.py  plot_utils.py
notebooks/: aussersihl-canopy.ipynb  background.ipynb  baseline.ipynb  cluster-I.ipynb  cluster-II.ipynb  matplotlibrc
src/: get_tiles_to_download.py  make_response_tiles.py  make_tiles.py
